--- a/.travis.yaml
+++ b/.travis.yaml
@@ -1,1 +1,11 @@
 language: python
+
+services:
+  - docker
+
+before_install:
+  - docker build -t hello act_1-2/
+  - docker run -d p 80:8000 hello
+
+script:
+  - pytest
