--- a/.travis.yaml
+++ b/.travis.yaml
@@ -7,5 +7,8 @@ before_install:
   - docker build -t hello act_1-2/
   - docker run -d p 80:8000 hello
 
+install:
+  - pip install -r test/requirements.txt
+
 script:
   - pytest
