--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,9 @@ services:
   - docker
 
 before_install:
-  - docker build -t hello act_1-2/
-  - docker run -d -p 8000:80 hello
+#  - docker build -t hello act_1-2/
+#  - docker run -d -p 8000:80 hello
+  - docker-compose up -d
 
 install:
   - pip install -r test/requirements.txt
