--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_install:
 #  - docker build -t hello act_1-2/
 #  - docker run -d -p 8000:80 hello
   - docker-compose up -d
+  - sleep 10
 
 install:
   - pip install -r test/requirements.txt
