--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ services:
   - docker
 
 before_install:
-  - docker-compose up -d
-  - sleep 15
+  - docker-compose up -d --build
+  - sleep 20
 
 install:
   - pip install -r test/requirements.txt
