Now you can upload files, and if it weren't for some Range header bs you could watch them too. Links work though, try that

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,6 +5,9 @@ upstream tubehub {
 server{
     listen 80;
 
+    client_max_body_size 50m;
+    max_ranges 1024;
+
     location / {
         proxy_pass http://tubehub;
     }
